--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 *.user
 *.userosscache
 *.sln.docstates
+Makefile
+Makefile.Release
+Makefile.Debug
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
